# python-client

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
scripts/: generate_models.py
src/figchain/: __init__.py  auth.py  client.py  config.py  evaluation.py  exceptions.py  models.py  models_dto.py  schema.avsc  serialization.py  store.py  transport.py  util.py  version.py
src/figchain/backup/: crypto.py  fetcher.py  service.py
src/figchain/bootstrap/: backup.py  fallback.py  hybrid.py  server.py  strategy.py  vault.py
src/figchain/encryption/: crypto.py  service.py
src/figchain/vault/: crypto.py  fetcher.py  service.py
tests/: test_auth.py  test_client.py  test_config_formats.py  test_evaluation.py  test_store.py  test_transport.py
