[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figchain"
version = "0.1.0"
description = "FigChain Python Client"
readme = "README.md"
authors = [{ name = "FigChain Team", email = "support@figchain.io" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["figchain", "configuration", "feature-flags"]
dependencies = [
    "requests>=2.25.0",
    "avro>=1.11.0",
    "typing-extensions>=4.0.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "mypy",
    "black",
    "avro-gen3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
figchain = ["*.avsc"]

